--- a/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
@@ -140,7 +140,7 @@ spec:
                       DynamicResourceAllocation feature gate.
 
 
-                      This field is immutable.
+                      This field is immutable. It can only be set for containers.
                     items:
                       description: ResourceClaim references one entry in PodSpec.ResourceClaims.
                       properties:
