type: add cacheExtraArgs

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -642,6 +642,8 @@ spec:
                     properties:
                       cacheEnabled:
                         type: boolean
+                      cacheExtraArgs:
+                        type: string
                       cacheInactive:
                         type: string
                       cacheLoaderFiles:
