--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -650,6 +650,8 @@ spec:
                         properties:
                           cacheEnabled:
                             type: boolean
+                          cacheExtraArgs:
+                            type: string
                           cacheInactive:
                             type: string
                           cacheLoaderFiles:
