--- a/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
@@ -46,6 +46,8 @@ spec:
                 properties:
                   cacheEnabled:
                     type: boolean
+                  cacheExtraArgs:
+                    type: string
                   cacheInactive:
                     type: string
                   cacheLoaderFiles:
