--- a/config/crd/bases/extensions.tsuru.io_rpaasvalidations.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasvalidations.yaml
@@ -627,6 +627,8 @@ spec:
                     properties:
                       cacheEnabled:
                         type: boolean
+                      cacheExtraArgs:
+                        type: string
                       cacheInactive:
                         type: string
                       cacheLoaderFiles:
