feat: implement UpstreamOptions CRUD operations with traffic shaping and canary deployments

--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -6694,6 +6694,68 @@ spec:
                             type: integer
                         type: object
                     type: object
+                  upstreamOptions:
+                    description: |-
+                      UpstreamOptions is the list of upstream options to be applied to the
+                      instance. Each upstream option defines a primary bind and canary binds
+                      with a traffic shaping policy and a load balancing algorithm.
+                      The primary bind is the main bind for the upstream, while canary binds
+                      are used to distribute traffic based on the defined traffic shaping policy.
+                      The load balancing algorithm is used to distribute traffic among the
+                      upstreams.
+                    items:
+                      properties:
+                        bind:
+                          description: Main bind for this upstream
+                          type: string
+                        canary:
+                          description: |-
+                            CanaryBinds contains the names of other Binds that participate in traffic distribution
+                            based on their individual TrafficShapingPolicy configurations
+                          items:
+                            type: string
+                          type: array
+                        loadBalance:
+                          description: LoadBalance defines the load balancing algorithm
+                            to be used for this upstream.
+                          type: string
+                        trafficShapingPolicy:
+                          description: TrafficShapingPolicy defines the traffic shaping
+                            policy for this upstream.
+                          properties:
+                            cookie:
+                              description: Cookie on which to redirect requests to
+                                this backend
+                              type: string
+                            header:
+                              description: Header on which to redirect requests to
+                                this backend
+                              type: string
+                            headerPattern:
+                              description: HeaderPattern the header value match pattern,
+                                support exact, regex.
+                              type: string
+                            headerValue:
+                              description: HeaderValue on which to redirect requests
+                                to this backend
+                              type: string
+                            weight:
+                              description: 'Weight-based routing: only ONE Bind in
+                                a canary group can have weight > 0'
+                              type: integer
+                            weightTotal:
+                              type: integer
+                          required:
+                          - cookie
+                          - header
+                          - headerPattern
+                          - headerValue
+                          - weight
+                          type: object
+                      required:
+                      - bind
+                      type: object
+                    type: array
                 type: object
             type: object
         type: object
